--- a/web/viewer.css
+++ b/web/viewer.css
@@ -15,6 +15,21 @@
 
 @import url(pdf_viewer.css);
 
+#meta-next, #meta-prev {
+    font-family: 'Varela', Arial, Sans-Serif!important;
+    font-size: 12px;
+    color: #DDD;
+    cursor: pointer;
+    font-weight: 700;
+}
+
+#meta-next img, #meta-prev img{
+  margin-left: 5px;
+  margin-right: 5px;
+  position: relative;
+  top: 5px;
+}
+
 * {
   padding: 0;
   margin: 0;
