next and previous highlight button only active if there are highlights available displaying the first highlighted page when document loads, if document doesn't have highlights it should show the last page user looked at if key_page is selected, go to the first highlighted key page

--- a/web/viewer.css
+++ b/web/viewer.css
@@ -30,8 +30,12 @@
   top: 5px;
 }
 
-#meta-key.disabled {
+#meta-key.disabled ,#meta-next.disabled, #meta-prev.disabled{
   opacity: .3;
+}
+
+#meta-key.hide ,#meta-next.hide, #meta-prev.hide{
+  opacity: 0;
 }
 
 * {
