--- a/web/viewer.css
+++ b/web/viewer.css
@@ -15,6 +15,29 @@
 
 @import url(pdf_viewer.css);
 
+#meta-next, #meta-prev, #meta-key {
+    font-family: 'Varela', Arial, Sans-Serif!important;
+    font-size: 12px;
+    color: #DDD;
+    cursor: pointer;
+    font-weight: 700;
+}
+
+#meta-next img, #meta-prev img, #meta-key img{
+  margin-left: 5px;
+  margin-right: 5px;
+  position: relative;
+  top: 5px;
+}
+
+#meta-key.disabled ,#meta-next.disabled, #meta-prev.disabled{
+  opacity: .3;
+}
+
+#meta-key.hide ,#meta-next.hide, #meta-prev.hide{
+  opacity: 0;
+}
+
 * {
   padding: 0;
   margin: 0;
