--- a/web/text_layer_builder.css
+++ b/web/text_layer_builder.css
@@ -40,7 +40,7 @@
   margin: -1px;
   padding: 1px;
 
-  background-color: rgb(0, 255, 255);
+  background-color: cyan;
   border-radius: 4px;
 }
 
@@ -57,11 +57,11 @@
 }
 
 .textLayer .highlight.selected {
-  background-color: rgb(0, 255, 255);
+  background-color: cyan;
 }
 
-.textLayer ::selection { background: rgb(0,0,255); }
-.textLayer ::-moz-selection { background: rgb(0,0,255); }
+.textLayer ::selection { background: cyan; }
+.textLayer ::-moz-selection { background: cyan; }
 
 .textLayer .endOfContent {
   display: block;
